--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b7f67">  <td>20/05/06 06:24:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.PageStart()[pri:0, instance:com.acti.TestCase.TasksPageTest@5e5792a0]">&gt;&gt;PageStart</td> 
-<td>&nbsp;</td>  <td>main@1694556038</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>20/05/06 06:24:22</td>   <td>16009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TasksPageTest.VerifyTaskClick()[pri:1, instance:com.acti.TestCase.TasksPageTest@5e5792a0]">VerifyTaskClick</td> 
-  <td>main@1694556038</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>20/05/11 21:07:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.PageStart()[pri:0, instance:com.acti.TestCase.TestLoginSS@3532ec19]">&gt;&gt;PageStart</td> 
+<td>&nbsp;</td>  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>20/05/11 21:07:17</td>   <td>-457</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.Reports()[pri:0, instance:com.acti.TestCase.TestLoginSS@3532ec19]">&gt;&gt;Reports</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="74b285">  <td>20/05/11 21:07:33</td>   <td>15265</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLoginSS.SSTest()[pri:0, instance:com.acti.TestCase.TestLoginSS@3532ec19]">SSTest</td> 
+  <td>main@1508646930</td>   <td></td> </tr>
+<tr bgcolor="8b7f67">  <td>20/05/11 21:07:34</td>   <td>15938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.ScreenShotBase(org.testng.ITestResult)[pri:0, instance:com.acti.TestCase.TestLoginSS@3532ec19]">&lt;&lt;ScreenShotBase</td> 
+<td>&nbsp;</td>  <td>main@1508646930</td>   <td></td> </tr>
 </table>
